--- a/index.html
+++ b/index.html
@@ -476,68 +476,12 @@ window.addEventListener("load",function() {
 						<iframe src="//player.vimeo.com/video/91973305" width="600px" margin:0 auto; height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				</div>			
 				<!----//End-studio----> 
-   		       <!---- strat-clent---->
-		   	    <div class="clients">
-					<div class="wrap"> 
-						<div class="client-head">
-							<h3>OUR CLIENTS</h3>											
-						</div>
-						<!---strat-image-cursuals---->
-		                  <div class="t-clients">
-		                  	<div class="wrap"> 											 
-									<div class="nbs-flexisel-container"><div class="nbs-flexisel-inner"><ul class="flexiselDemo3 nbs-flexisel-ul" style="left: -253.6px; display: block;">					    					    					       
-									<li onclick="location.href='#';" class="nbs-flexisel-item" style="width: 253.6px;"><img src="images/client1.png"></li><li onclick="location.href='#';" class="nbs-flexisel-item" style="width: 253.6px;"><img src="images/client2.png"></li><li onclick="location.href='#';" class="nbs-flexisel-item" style="width: 253.6px;"><img src="images/client3.png"></li><li onclick="location.href='#';" class="nbs-flexisel-item" style="width: 253.6px;"><img src="images/client4.png"></li><li onclick="location.href='#';" class="nbs-flexisel-item" style="width: 253.6px;"><img src="images/client5.png"></li><li onclick="location.href='#';" class="nbs-flexisel-item" style="width: 253.6px;"><img src="images/client1.png"></li><li onclick="location.href='#';" class="nbs-flexisel-item" style="width: 253.6px;"><img src="images/client2.png"></li><li onclick="location.href='#';" class="nbs-flexisel-item" style="width: 253.6px;"><img src="images/client3.png"></li></ul><div class="nbs-flexisel-nav-left" style="top: 21.5px;"></div><div class="nbs-flexisel-nav-right" style="top: 21.5px;"></div></div></div> 
-									<div class="clear"> </div>      
-								  <!---strat-image-cursuals---->
-										<script type="text/javascript" src="js/jquery.flexisel.js"></script>
-										<!---End-image-cursuals---->
-										<script type="text/javascript">
-										$(window).load(function() {
-										    $(".flexiselDemo3").flexisel({
-										        visibleItems: 5,
-										        animationSpeed: 1000,
-										        autoPlay: true,
-										        autoPlaySpeed: 3000,            
-										        pauseOnHover: true,
-										        enableResponsiveBreakpoints: true,
-										        responsiveBreakpoints: { 
-										            portrait: { 
-										                changePoint:480,
-										                visibleItems: 1
-										            }, 
-										            landscape: { 
-										                changePoint:640,
-										                visibleItems: 2
-										            },
-										            tablet: { 
-										                changePoint:768,
-										                visibleItems: 3
-										            }
-										        }
-										    });
-										});
-										</script>
-								<!---->
-						  		<!---->
-						 	 </div>				
-						</div>
-					</div>					
-				</div>
-				<!----//End-clients----> 
 				<!-----logos---->	
-		   		 <div class="logos"> 
-		   		 	<div class="wrap"> 
-			   		 	<ul>
-			   		 		<li><img src="images/client6.png" alt="" /></li>
-			   		 		<li><img src="images/client7.png" alt="" /></li>
-			   		 	</ul>
-		   		 	</div>
-		   		 </div>
 		   		 <!-----cntact---->	
    		 		<div class="contact s6" id="contact">
 					<div class="wrap">
 						<h3>CONTACT US</h3>
-							<p>Proin iaculis purus consequat sem cure.</p>	
+							<p>Scan or paste on your browser</p>	
 					</div>
 				</div>
 
