--- a/index.html
+++ b/index.html
@@ -442,17 +442,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="contact s6" id="contact">
 		<div class="wrap">
 			<h3>CONTACT US</h3>
-			<p>Scan or Subscribe</p>
-			<!-- Agregar imagen con link -->
+			<p>Scan or paste on your browser</p>
 			<a href="https://beacons.ai/pqusaconstruction" target="_blank">
 				<img src="images/QRcode.jpg" alt="QR Code" class="contact-image">
 			</a>
-			<!-- Botón con link y flecha -->
-			<a href="https://beacons.ai/pqusaconstruction" target="_blank" class="subscribe-button">
-				Subscribe
-			</a>
+			<div class="subscribe-button-container">
+				<a href="https://beacons.ai/pqusaconstruction" target="_blank" class="subscribe-button">
+					Subscribe
+				</a>
+			</div>
 		</div>
 	</div>
+	
 
 	<!----start-bottom-footer---->
 	<div class="bottom-footer">
