--- a/index.html
+++ b/index.html
@@ -155,29 +155,27 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<!---start-da-slider----->
 		<div id="da-slider" class="da-slider">
 			<div class="da-slide">
-				<h2 class="title">TRANSFORMING SPACES,</h2>
+				<h2 class="title"></h2>
 				<h3 class="title">ENHANCING LIVES</h3>
-				<p class="description">Quality</p>
 			</div>
 			<div class="da-slide">
 				<h2 class="title">YOUR HOME EXPERTS</h2>
 				<h3 class="title">P.Q USA CONSTRUCTION</h3>
-				<p class="description">Telf: 203-694-2914</p>
+				<p class="description"></p>
 			</div>
 			<div class="da-slide">
-				<h2 class="title">TRANSFORMING HOMES & SPACES</h2>
-				<h3 class="title">ROOFING, SIDING, DECKS, GUTTERS</h3>
-				<p class="description">& WINDOWS</p>
+				<h2 class="title">TRANSFORMING</h2>
+				<h3 class="title">HOMES & SPACES</h3>
 			</div>
 			<div class="da-slide">
 				<h2 class="title">YOUR VISION</h2>
 				<h3 class="title">IS OUR EXPERTISE</h3>
-				<p class="description">HIRE US</p>
+				<p class="description"></p>
 			</div>
 			<div class="da-slide">
-				<h2 class="title">WORKER SAFETY</h2>
-				<h3 class="title">Safety First for Our Team!</h3>
-				<p class="description">GET A FREE ESTIMATE AND INSPECTION</p>
+				<h2 class="title">FREE</h2>
+				<h3 class="title">ESTIMATE AND INSPECTION!</h3>
+				<p class="description"></p>
 			</div>
 		</div>
 		<!---//End-da-slider----->
