last button slide

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<!---//End-da-slider----->
 	</div>
 
-	<a href="#services" class="button scroll"><img src="images/arrow.png"></a>
+	<a href="#about" class="button scroll"><img src="images/arrow.png"></a>
 	<!-- start header -->
 	<div class="header">
 		<div class="logo">
