--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- start header -->
 	<div class="header">
 		<div class="logo">
-			<a href="#s7" class="scroll"><img src="images/logo-peq.png"></a>
+			<a href="#s7" class="scroll"><img src="images/logo.png"></a>
 		</div>
 		<!-- start top-nav-->
 		<div class="h_right">
