--- a/index.html
+++ b/index.html
@@ -340,38 +340,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="wrap">
 			<div class="tm-head">
 				<h3>ABOUT US</h3>
-				<p>Proin iaculis purus consequat sem cure.</p>
+				<p>We deliver quality construction solutions, building trust and excellence in every project.</p>
 			</div>
 			<div class="tm-head-grids">
-				<div class="tm-head-grid">
-					<h4>OUR MISION</h4>
-					<h5>Our mission as a construction company is to provide and satisfy the needs of our clients with
-						the best construction service together with the most trained professionals and with all the
-						tools to create a safe work.</h5>
-					<!-- <ul class="top-social-icons">
-									<li><a class="twitter simptip-position-bottom simptip-movable" data-tooltip="twitter" href="#"> </a></li>
-									<li><a class="facebook simptip-position-bottom simptip-movable" data-tooltip="Facebook" href="#"> </a></li>
-									<li><a class="pin simptip-position-bottom simptip-movable" data-tooltip="pintrest" href="#"> </a></li>
-									<div class="clear"> </div>
-								</ul> -->
+				<div class="tm-head-grid mission">
+					<h4>OUR MISSION</h4>
+					<p>Our mission as a construction company is to provide and satisfy the needs of our clients with the best construction service together with the most trained professionals and with all the tools to create a safe work.</p>
 				</div>
-				<div class="tm-head-grid">
-
+				<div class="tm-head-grid vision">
 					<h4>OUR VISION</h4>
-					<h5>To become one of the leading companies in the construction industry recognized for its capacity,
-						quality and compliance with each and every one of the jobs entrusted to us. In this way we will
-						obtain recognition from the American community and in the long term worldwide.</h5>
-					<!-- <ul class="top-social-icons">
-									<li><a class="twitter simptip-position-bottom simptip-movable" data-tooltip="twitter" href="#"> </a></li>
-									<li><a class="facebook simptip-position-bottom simptip-movable" data-tooltip="Facebook" href="#"> </a></li>
-									<li><a class="pin simptip-position-bottom simptip-movable" data-tooltip="pintrest" href="#"> </a></li>
-									<div class="clear"> </div>
-								</ul> -->
+					<p>To become one of the leading companies in the construction industry recognized for its capacity, quality and compliance with each and every one of the jobs entrusted to us. In this way, we will obtain recognition from the American community and in the long term worldwide.</p>
 				</div>
-				<div class="clear"> </div>
+				<div class="clear"></div>
 			</div>
 		</div>
 	</div>
+	
 	<!----//End-team-members---->
 	<!----start-team-members---->
 	<div class="experience">
