--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="wrap">
 			<div class="ex-head">
 				<h3>OUR EXPERIENCE</h3>
-				<p>Proin iaculis purus consequat sem cure.</p>
+				<p>"Years of experience, coupled with a commitment to customer satisfaction, make us a trusted partner in bringing visions to life."</p>
 			</div>
 			<div class="prog">
 				<div class="text">
@@ -373,33 +373,33 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="clear"></div>
 				<div class="progress-bar-container" data-percent="99%">
-					<div class="progress-bar" style="width: 90%;">
+					<div class="progress-bar" style="width: 99%;">
 					</div>
 				</div>
 			</div>
 			<div class="prog1">
 				<div class="text">
-					<span>HTML/css</span>
+					<span>DECKS</span>
 				</div>
 				<div class="text_p">
 					<span>99%</span>
 				</div>
 				<div class="clear"></div>
 				<div class="progress-bar-container" data-percent="99%">
-					<div class="progress-bar1" style="width: 40%;">
+					<div class="progress-bar1" style="width: 99%;">
 					</div>
 				</div>
 			</div>
 			<div class="prog2">
 				<div class="text">
-					<span>illustration</span>
+					<span>SIDING</span>
 				</div>
 				<div class="text_p">
 					<span>99%</span>
 				</div>
 				<div class="clear"></div>
 				<div class="progress-bar-container" data-percent="99%">
-					<div class="progress-bar2" style="width: 60%;">
+					<div class="progress-bar2" style="width: 99%;">
 					</div>
 				</div>
 			</div>
