sticky social and network social links

--- a/index.html
+++ b/index.html
@@ -142,10 +142,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				window.scrollTo(0, 1);
 			}, 0);
 		});</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 </head>
 
 <body>
+	<!-- sticky social  -->
+	<div class="sticky-social">
+        <a href="https://www.facebook.com/profile.php?id=100069295885706&mibextid=LQQJ4d" class="facebook" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/pqusaconstruction/" class="instagram" title="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.tiktok.com/@pq.usa.constructi" class="tiktok" title="TikTok"><i class="fab fa-tiktok"></i></a>
+        <a href="mailto:pqusaconstruction@gmaiil.com" class="gmail" title="Gmail"><i class="far fa-envelope"></i></a>
+    </div>
+	<!-- //sticky social  -->
 	<!-- start slider -->
+	
 	<div class="slider_bg s7">
 		<video autoplay muted loop>
 			<source src="images/video.mp4" type="video/mp4">
@@ -439,15 +449,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!----start-bottom-footer---->
 	<div class="bottom-footer">
 		<div class="wrap">
-			<div class="bottom-footer-center">
-				<ul class="bottom-social-icons">
-					<li><a class="bottom-twitter" href="#"> </a></li>
-					<li><a class="bottom-facebook" href="#"> </a></li>
-					<li><a class="bottom-pin" href="#"> </a></li>
-					<li><a class="bottom-google" href="#"> </a></li>
-					<div class="clear"> </div>
-				</ul>
-			</div>
 			<div class="bottom-footer-left">
 				<p><span>&#169; Copyright 2024</span></a></p>
 			</div>
